fix: improve touch gestures on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,16 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+  touch-action: none;
+  overscroll-behavior: none;
+}
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
